--- a/styles/contact.css
+++ b/styles/contact.css
@@ -155,6 +155,11 @@ label {
     font-size: 18px;
   }
 
+  footer{
+    display:none;
+  }
+
+
   .return{
     left:50px;
   }
@@ -202,6 +207,7 @@ label {
   ul.navigation.responsive li a {
     display: block;
     text-align: center;
+    color:#494646;
   }
 
 
