--- a/styles/social.css
+++ b/styles/social.css
@@ -155,6 +155,11 @@ h2
     overflow-x:hidden;
   }
 
+  footer{
+    display:none;
+  }
+
+
   ul.navigation {
     min-width:300px;
     max-width: 600px;
@@ -179,7 +184,7 @@ h2
 
   ul.navigation.responsive{
     position: relative;
-    padding-top:60px;
+    padding-top:0px;
     width: 100%;
     background-color: rgba(255,255,255,0.3);
   }
